📱 fix: correction alignment text when smash commit

--- a/src/components/commit/style.module.scss
+++ b/src/components/commit/style.module.scss
@@ -65,10 +65,12 @@
 
     .information {
       align-items: flex-end;
+      text-align: end;
     }
 
     .dateTime {
       align-items: flex-start;
+      text-align: start;
     }
 
     .avatar {
